Skrur på validering av aud i jwt token

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: ${AZURE_OPENID_CONFIG_ISSUER}
-  #          audiences: ${AZURE_APP_CLIENT_ID}
+          audiences: ${AZURE_APP_CLIENT_ID}
   web:
     resources:
       static-locations:
