--- a/backend/src/test/resources/application-junit.properties
+++ b/backend/src/test/resources/application-junit.properties
@@ -1,6 +1,6 @@
 AZURE_OPENID_CONFIG_ISSUER=http://mocked
-#spring.security.oauth2.resourceserver.jwt.audiences=historisk-helt-backend
-spring.web.resources.static-locations=file:./frontend/dist
+AZURE_APP_CLIENT_ID=mocked
+
 nais.token.endpoint=http://mocked
 nais.token.exchange.endpoint=http://mocked
 app.gruppe.saksbehandler=gr_saksbehandler
