--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -1,5 +1,7 @@
 AZURE_OPENID_CONFIG_ISSUER=http://host.docker.internal:8102/azure-mock
-#spring.security.oauth2.resourceserver.jwt.audiences=historisk-helt-backend
+# overser audience sjekken i dev miljø pga problemer med mock-oidc og aud i jwt token
+spring.security.oauth2.resourceserver.jwt.audiences=
+AZURE_APP_CLIENT_ID=mock-client-id
 
 spring.web.resources.static-locations=file:./frontend/dist
 
