--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -38,11 +38,16 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
           registry-url: "https://npm.pkg.github.com"
 
+      - name: Clean npm cache
+        run: npm cache clean --force
+
       - name: Installere node moduler
         working-directory: ./frontend
         run: npm ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
+          NPM_CONFIG_PROXY: ""
+          NPM_CONFIG_HTTPS_PROXY: ""
 
       - name: Build artifacts
         run: mvn --batch-mode verify
