--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,18 +10,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  analyze:
-    name: Analyze
+  analyze-kotlin:
     runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
       security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'kotlin', 'typescript' ]  # Covers Java/Kotlin and JS/TS/React
 
     steps:
       - uses: actions/checkout@v5
@@ -40,8 +34,8 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
         with:
-          languages: ${{ matrix.language }}
-          build-mode: none
+          languages: kotlin
+          build-mode: manual
 
       - name: Build artifacts
         run: mvn compile
@@ -51,4 +45,26 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
         with:
-          category: "/language:${{matrix.language}}"
+          category: "/language:kotlin"
+
+  analyze-typescript:
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v4
+        with:
+          languages: tyepscript
+          build-mode: autobuild
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v4
+        with:
+          category: "/language:typescript"
+
