--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
         with:
-          languages: tyepscript
+          languages: typescript
           build-mode: autobuild
 
       - name: Perform CodeQL Analysis
