Første versjon med tiptap og nytt design

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,11 @@
     "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-router": "^1.131.27",
     "@tanstack/react-router-devtools": "^1.131.27",
+    "@tiptap/pm": "^3.11.0",
+    "@tiptap/react": "^3.11.0",
+    "@tiptap/starter-kit": "^3.11.0",
+    "classnames": "^2.5.1",
+    "css-tree": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -27,6 +32,7 @@
     "@navikt/aksel-stylelint": "^7.29.0",
     "@tanstack/router-plugin": "^1.131.27",
     "@types/css-modules": "^1.0.5",
+    "@types/css-tree": "^2.3.11",
     "@types/node": "^24.5.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
