--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -20,3 +20,5 @@ app.pdl.url=http://localhost:9080/pdl-mock
 
 app.tilgangsmaskin.url=http://localhost:9080/tilgangsmaskin-mock
 app.tilgangsmaskin.audience=api://mock.tilgangsmaskin/.default
+
+app.pdfgen.url=https://historisk-pdfgen.intern.dev.nav.no
