--- a/backend/src/test/resources/application-junit.properties
+++ b/backend/src/test/resources/application-junit.properties
@@ -1,16 +1,18 @@
-AZURE_OPENID_CONFIG_ISSUER=http://mocked
+AZURE_OPENID_CONFIG_ISSUER=http://junit-azure-mocked
 AZURE_APP_CLIENT_ID=mocked
 
-nais.token.endpoint=http://mocked
-nais.token.exchange.endpoint=http://mocked
+nais.token.endpoint=http://token-junit-mocked
+nais.token.exchange.endpoint=http://token-exchange-junit-mocked
 app.gruppe.saksbehandler=gr_saksbehandler
 app.gruppe.attestant=gr_attestant
 app.gruppe.les=gr_les
 app.pdl.audience=api://mock.pdl.pdl-api/.default
-app.pdl.url=http://mocked
-app.tilgangsmaskin.url=http://mocked
+app.pdl.url=http://pdl-junit.mocked
+app.tilgangsmaskin.url=https://tilgangsmaskin-junit.mocked
 app.tilgangsmaskin.audience=api://mock.tilgangsmaskin/.default
 
 #Kafka opplegg med embedded Kafka
 KAFKA_BROKERS=${spring.embedded.kafka.brokers}
 spring.kafka.security.protocol=PLAINTEXT
+
+app.pdfgen.url=https://pdfgen-junit.mocked
