tilgang til pdfgen

--- a/.nais/app/backend.yaml
+++ b/.nais/app/backend.yaml
@@ -57,6 +57,7 @@ spec:
       rules:
         - application: populasjonstilgangskontroll
           namespace: tilgangsmaskin
+        - application: historisk-pdfgen
       external:
         - host: "pdl-api.{{env}}-fss-pub.nais.io"
         - host: "oppgave.{{env}}-fss-pub.nais.io"
