--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@tiptap/react": "^3.11.0",
     "@tiptap/starter-kit": "^3.11.0",
     "classnames": "^2.5.1",
+    "dompurify": "^3.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
