--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,11 @@
     "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-router": "^1.131.27",
     "@tanstack/react-router-devtools": "^1.131.27",
+    "@tiptap/pm": "^3.11.0",
+    "@tiptap/react": "^3.11.0",
+    "@tiptap/starter-kit": "^3.11.0",
+    "classnames": "^2.5.1",
+    "dompurify": "^3.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
