Kopierer over dokarkiv lib fra helt og modifiserer litt på typer

--- a/libs/pom.xml
+++ b/libs/pom.xml
@@ -18,6 +18,7 @@
         <module>helved</module>
         <module>common-types</module>
         <module>pdfgen</module>
+        <module>dokarkiv</module>
     </modules>
 
     <dependencies>
