Config for dokarkiv og saf

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>pdfgen</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>dokarkiv</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Spring boot dependencies -->
         <dependency>
