--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -22,3 +22,9 @@ app.tilgangsmaskin.url=http://localhost:9080/tilgangsmaskin-mock
 app.tilgangsmaskin.audience=api://mock.tilgangsmaskin/.default
 
 app.pdfgen.url=https://historisk-pdfgen.intern.dev.nav.no
+
+app.dokarkiv.url=http://localhost:9080/dokarkiv-mock
+app.dokarkiv.audience=api://mock.dokarkiv/.default
+
+app.saf.url=http://localhost:9080/saf-mock
+app.saf.audience=api://mock.saf/.default
