--- a/backend/src/test/resources/application-junit.properties
+++ b/backend/src/test/resources/application-junit.properties
@@ -16,3 +16,9 @@ KAFKA_BROKERS=${spring.embedded.kafka.brokers}
 spring.kafka.security.protocol=PLAINTEXT
 
 app.pdfgen.url=https://pdfgen-junit.mocked
+
+app.dokarkiv.url=http://dokarkiv-junit.mocked
+app.dokarkiv.audience=api://mock.dokarkiv/.default
+
+app.saf.url=http://saf-junit.mocked
+app.saf.audience=api://mock.saf/.default
