--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -28,3 +28,6 @@ app.dokarkiv.audience=api://mock.dokarkiv/.default
 
 app.saf.url=http://localhost:9080/saf-mock
 app.saf.audience=api://mock.saf/.default
+
+app.dokdist.url=http://localhost:9080/dokdist-mock
+app.dokdist.audience=api://mock.dokdist/.default
