--- a/backend/src/test/resources/application-junit.properties
+++ b/backend/src/test/resources/application-junit.properties
@@ -22,3 +22,6 @@ app.dokarkiv.audience=api://mock.dokarkiv/.default
 
 app.saf.url=http://saf-junit.mocked
 app.saf.audience=api://mock.saf/.default
+
+app.dokdist.url=http://dokdist-junit.mocked
+app.dokdist.audience=api://mock.dokdist/.default
