lar cache time ut 20 min etter skriving

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -56,7 +56,7 @@ spring:
       group-id: ${spring.application.name}
   cache:
     caffeine:
-      spec: maximumSize=5000,expireAfterAccess=10m
+      spec: maximumSize=5000,expireAfterWrite=20m
     cache-names: pdlCache,tilgangsmaskinCache
 
 management:
