--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -54,6 +54,10 @@ spring:
 
     consumer:
       group-id: ${spring.application.name}
+  cache:
+    caffeine:
+      spec: maximumSize=5000,expireAfterWrite=20m
+    cache-names: pdlCache,tilgangsmaskinCache
 
 management:
   endpoints:
