--- a/backend/src/test/resources/application-dev.yml
+++ b/backend/src/test/resources/application-dev.yml
@@ -2,9 +2,7 @@ AZURE_OPENID_CONFIG_ISSUER: http://host.docker.internal:8102/azure-mock
 AZURE_APP_CLIENT_ID: "historisk-superapp"
 KAFKA_BROKERS: localhost:9092
 
-DB_HOST: localhost
-DB_PORT: 5032
-DB_DATABASE: historisk-superhelt
+DB_URL: jdbc:postgresql://localhost:5032/historisk-superhelt
 DB_USERNAME: postgres
 DB_PASSWORD: test
 
