--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -24,8 +24,15 @@ spring:
       static-locations:
         - classpath:/static
 
+    hikari:
+      data-source-properties:
+        ssl: ${DB_SSL_ENABLED:true}
+        sslmode: ${DB_SSLMODE:disable}
+        sslcert: ${DB_SSLCERT:}
+        sslkey: ${DB_SSLKEY_PK8:}
+        sslrootcert: ${DB_SSLROOTCERT:}
   datasource:
-    url: ${DB_URL}
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_DATABASE}
     driver-class-name: org.postgresql.Driver
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
