--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -24,11 +24,19 @@ spring:
       static-locations:
         - classpath:/static
 
+
   datasource:
     url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_DATABASE}
     driver-class-name: org.postgresql.Driver
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+    hikari:
+      data-source-properties:
+        ssl: ${DB_SSL_ENABLED:true}
+        sslmode: ${DB_SSLMODE:disable}
+        sslcert: ${DB_SSLCERT:}
+        sslkey: ${DB_SSLKEY_PK8:}
+        sslrootcert: ${DB_SSLROOTCERT:}
   jpa:
     open-in-view: false
     hibernate:
