--- a/backend/src/test/resources/application-dev.yml
+++ b/backend/src/test/resources/application-dev.yml
@@ -7,6 +7,7 @@ DB_PORT: 5032
 DB_DATABASE: historisk-superhelt
 DB_USERNAME: postgres
 DB_PASSWORD: test
+DB_SSL_ENABLED: false
 
 # overser audience sjekken i dev miljo pga problemer med mock-oidc og aud i jwt token
 spring:
