--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -26,17 +26,9 @@ spring:
 
 
   datasource:
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_DATABASE}
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    hikari:
-      data-source-properties:
-        ssl: ${DB_SSL_ENABLED:true}
-        sslmode: ${DB_SSLMODE:disable}
-        sslcert: ${DB_SSLCERT:}
-        sslkey: ${DB_SSLKEY_PK8:}
-        sslrootcert: ${DB_SSLROOTCERT:}
   jpa:
     open-in-view: false
     hibernate:
