Oppdaterer baseimage for mock

--- a/mocks/mock-server/Dockerfile
+++ b/mocks/mock-server/Dockerfile
@@ -1,6 +1,9 @@
-FROM ghcr.io/navikt/baseimages/temurin:21-appdynamics
+FROM gcr.io/distroless/java21-debian12:debug
+
+ENV TZ="Europe/Oslo"
+WORKDIR /app
 
 COPY target/*.jar app.jar
 
+CMD ["/app/app.jar"]
 EXPOSE 9080
-
