--- a/backend/src/test/resources/application-junit.yml
+++ b/backend/src/test/resources/application-junit.yml
@@ -33,6 +33,8 @@ app:
     audience: api://mock.dokdist/.default
 
 spring:
+  main:
+    banner-mode: "off"
   kafka:
     security:
       protocol: PLAINTEXT
