Bruker testcontainer for kafka

--- a/backend/src/test/resources/application-junit.yml
+++ b/backend/src/test/resources/application-junit.yml
@@ -1,7 +1,7 @@
 AZURE_OPENID_CONFIG_ISSUER: http://junit-azure-mocked
 AZURE_APP_CLIENT_ID: mocked
-#Kafka opplegg med embedded Kafka
-KAFKA_BROKERS: ${spring.embedded.kafka.brokers}
+#Kafka opplegg med testcontainers
+KAFKA_BROKERS: mocked:9092
 
 nais:
   token:
@@ -38,5 +38,3 @@ spring:
   kafka:
     security:
       protocol: PLAINTEXT
-
-
