--- a/compose.yml
+++ b/compose.yml
@@ -93,3 +93,8 @@ services:
       timeout: 3s
       retries: 5
       start_period: 10s
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
