Github opplegg for playwright

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,17 @@ jobs:
       packages: write
       contents: read
       id-token: write
+  e2e:
+    uses: ./.github/workflows/e2e.yaml
+    secrets: inherit
+    permissions:
+      packages: write
+      contents: read
+      id-token: write
   deploy_dev:
     needs:
       - build
+      - e2e
     name: "Deploy til dev"
     runs-on: ubuntu-latest
     permissions:
