--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,29 +25,10 @@ jobs:
       image: ${{ steps.docker-build-push.outputs.image }}
       telemetry: ${{ steps.docker-build-push.outputs.telemetry }}
     steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-java@v5
+      - uses: ./.github/actions/setup
         with:
-          distribution: temurin
-          java-version: '21'
-          cache: maven
-      - uses: actions/setup-node@v6
-        with:
-          node-version: '24'
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
-          registry-url: "https://npm.pkg.github.com"
-
-      - name: Installere node moduler
-        working-directory: ./frontend
-        run: npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
-
-      - name: Build artifacts
-        run: mvn --batch-mode verify
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
+          node-auth-token: ${{ secrets.READER_TOKEN }}
+          skipTests: false
 
       - name: Bygg og push docker image til GAR
         uses: nais/docker-build-push@791ebb6f74b82849c742a9bc9c97abe44c6c111f #v0
