--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -16,6 +16,7 @@ jobs:
       id-token: write
 
     steps:
+      - uses: actions/checkout@v6
       - uses: ./.github/actions/setup
         with:
           node-auth-token: ${{ secrets.READER_TOKEN }}
@@ -25,7 +26,7 @@ jobs:
         run: echo "127.0.0.1 host.docker.internal" | sudo tee -a /etc/hosts
 
       - name: Start Docker stack
-        run: docker compose -f docker-compose.yml up --build -d --wait
+        run: docker compose up --build -d --wait
 
       - name: Start backend
         run: |
