Flytter bygg av artifkat over i e2e

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -21,6 +21,10 @@ jobs:
         with:
           node-auth-token: ${{ secrets.READER_TOKEN }}
           skipTests: true
+      - name: Build artifacts
+        run: mvn --batch-mode verify -DskipTests
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
      
       - name: Add host.docker.internal to /etc/hosts
         run: echo "127.0.0.1 host.docker.internal" | sudo tee -a /etc/hosts
