--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -21,23 +21,18 @@ jobs:
         with:
           node-auth-token: ${{ secrets.READER_TOKEN }}
           skipTests: true
-      - name: Build artifacts
-        run: mvn --batch-mode verify -DskipTests
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
      
       - name: Add host.docker.internal to /etc/hosts
         run: echo "127.0.0.1 host.docker.internal" | sudo tee -a /etc/hosts
 
       - name: Start Docker stack
-        run: docker compose up --build -d --wait
+        run: docker compose up --build -d --wait --wait-timeout 120
 
       - name: Start backend
         run: |
           nohup mvn --batch-mode -pl backend -am -DskipTests spring-boot:run > backend.log 2>&1 &
           echo $! > backend.pid
-        env:
-          RUN_E2E_TESTS: "true"
+
 
       - name: Vent på backend
         run: timeout 120 bash -c 'until curl -sf http://localhost:8080/actuator/health; do sleep 2; done'
