--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -26,7 +26,7 @@ jobs:
         run: echo "127.0.0.1 host.docker.internal" | sudo tee -a /etc/hosts
 
       - name: Start Docker stack
-        run: docker compose up --build -d --wait --wait-timeout 120
+        run: docker compose up --build -d --wait
 
       - name: Start backend
         run: |
