--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,13 @@ build/
 
 local.env
 
-
 /frontend/node/
 
 .DS_Store
 .vscode
+
+
+### Playwright ###
+frontend/playwright-report/
+frontend/playwright/.cache/
+frontend/test-results/
